Fixed lottery-page img for desktop width on IOS

--- a/src/resources/sass/pages/_lottery.scss
+++ b/src/resources/sass/pages/_lottery.scss
@@ -776,12 +776,6 @@
 			height: 342px;
 			width: 100%;
 			max-width: 255px;
-
-			img {
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-			}
 		}
 
 		@media screen and (max-width: 767px) {
@@ -915,6 +909,14 @@
 		height: 342px;
 		width: auto;
 		max-width: 285px;
+		box-shadow: none;
+
+		img {
+			width: auto;
+			height: 100%;
+			object-fit: contain;
+			box-shadow: 0px 6px 6px #88b4c5;
+		}
 	}
 }
 
@@ -971,7 +973,6 @@
 				width: auto;
 				max-width: 204px;
 				max-height: 261px;
-				box-shadow: 0px 6px 6px #88b4c5;
 			}
 		}
 	}
